--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-Today will be the last session of Jenkins
-Nxt class will be on Docker
+<!DOCTYPE html>
+<html>
+<body>
+
+<p>I will display &euro;</p>
+<p>I will display &#8364;</p>
+<p>I will display &#x20AC;</p>
+
+</body>
+</html>
